webstore-app/overlays/qa/platform-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        reloader.stakater.com/search: "true"
    spec:
      containers:
        - name: vc-platform-web
