webstore-app/overlays/qa/storefront-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
spec:
  template:
    metadata:
      annotations:
        reloader.stakater.com/search: "true"
